--- a/docs/docs/customize/model-providers/top-level/bedrock.mdx
+++ b/docs/docs/customize/model-providers/top-level/bedrock.mdx
@@ -43,6 +43,41 @@ We recommend configuring **Claude 3.7 Sonnet** as your chat model.
   </TabItem>
 </Tabs>
 
+You can also use an AWS `accessKeyId` and `secretAccessKey` for authentication instead of a local credentials profile.
+
+<Tabs groupId="config-example">
+  <TabItem value="yaml" label="YAML">
+  ```yaml title="config.yaml"
+  models:
+    - name: Claude 3.7 Sonnet
+      provider: bedrock
+      model: us.anthropic.claude-3-7-sonnet-20250219-v1:0
+      env:
+        region: us-east-1
+        accessKeyId: ${{ secrets.AWS_ACCESS_KEY_ID }} # can also enter key inline here for local assistants
+        secretAccessKey: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # can also enter key inline here for local assistants
+      roles:
+        - chat
+  ```
+  </TabItem>
+  <TabItem value="json" label="JSON">
+  ```json title="config.json"
+  {
+    "models": [
+      {
+        "title": "Claude 3.7 Sonnet",
+        "provider": "bedrock",
+        "model": "us.anthropic.claude-3-7-sonnet-20250219-v1:0",
+        "region": "us-east-1",
+        "accessKeyId": "[YOUR_ACCESS_KEY_ID]",
+        "secretAccessKey": "[YOUR_SECRET_ACCESS_KEY]" 
+      }
+    ]
+  }
+  ```
+  </TabItem>
+</Tabs>
+
 > If you run into the following error when connecting to the new Claude 3.5 Sonnet 2 models from AWS - `400 Invocation of model ID anthropic.claude-3-5-sonnet-20241022-v2:0 with on-demand throughput isn't supported. Retry your request with the ID or ARN of an inference profile that contains this model.`
 
 > You can fix this using the following config:
