fix broken links

--- a/docs/docs/features/autocomplete/how-to-customize.mdx
+++ b/docs/docs/features/autocomplete/how-to-customize.mdx
@@ -1,5 +1,5 @@
 # How to Customize Autocomplete
 
-Continue offers a handful of settings to customize autocomplete behavior. Visit the [User Settings Page](/customize/deep-dives/settings/) to manage these settings.
+Continue offers a handful of settings to customize autocomplete behavior. Visit the [User Settings Page](/customize/settings) to manage these settings.
 
 For a comprehensive guide on all configuration options and their impacts, see the [Autocomplete deep dive](/customize/deep-dives/autocomplete).
