add missing files and redirects

--- a/docs2/features/chat/quick-start.mdx
+++ b/docs2/features/chat/quick-start.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Chat Quick Start"
+title: "Quick Start"
 ---
 
 Chat makes it easy to ask for help from an AI without leaving your IDE. Get explanations, generate code, and iterate on solutions conversationally.
