--- a/docs/customize/deep-dives/autocomplete.mdx
+++ b/docs/customize/deep-dives/autocomplete.mdx
@@ -84,6 +84,30 @@ Then, add the model to your configuration:
 
 Once the model has been downloaded, you should begin to see completions in VS Code.
 
+NOTE: Typically, thinking-type models are not recommended as they generate more slowly and are not suitable for scenarios that require speed. 
+
+However, if you use any thinking-switchable models, you can configure these models for autocomplete functions by turning off the thinking mode.
+
+For example:
+
+<Tabs>
+  <Tab title="YAML">
+  ```yaml title="config.yaml"
+  models:
+    - name: Qwen3 without Thinking for Autocomplete
+      provider: ollama
+      model: qwen3:4b   # qwen3 is a thinking-switchable model
+      roles:
+        - autocomplete
+      requestOptions:
+        extraBodyProperties:
+          think: false  # turning off the thinking
+  ```
+  </Tab>
+</Tabs>
+
+Then, in the continue panel, select this model as the default model for autocomplete.
+
 ## Configuration Options
 
 ### Hub Autocomplete models
@@ -138,12 +162,12 @@ Yes, in VS Code, if you don't want to be shown suggestions automatically you can
 
 This is a built-in feature of VS Code, but it's just a bit hidden. Follow these settings to reassign the keyboard shortcuts in VS Code:
 
-1. Press `Ctrl+Shift+P`, type the command: `Preferences: Open Keyboard Shortcuts`, and enter the keyboard shortcuts settings page.
+1. Press <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>P</kbd>, type the command: `Preferences: Open Keyboard Shortcuts`, and enter the keyboard shortcuts settings page.
 2. Search for `editor.action.inlineSuggest.acceptNextLine`.
-3. Set the key binding to `Tab`.
+3. Set the key binding to <kbd>Tab</kbd>.
 4. Set the trigger condition (when) to `inlineSuggestionVisible && !editorReadonly`.
-   This will make multi-line completion (including continue and from VS Code built-in or other plugin snippets) still work, and you will see multi-line completion. However, Tab will only fill in one line at a time. Any unnecessary code can be canceled with `Esc`.
-   If you need to apply all the code, just press `Tab` multiple times.
+   This will make multi-line completion (including continue and from VS Code built-in or other plugin snippets) still work, and you will see multi-line completion. However, Tab will only fill in one line at a time. Any unnecessary code can be canceled with <kbd>Esc</kbd>.
+   If you need to apply all the code, just press <kbd>Tab</kbd> multiple times.
 
 ### How to turn off autocomplete
 
