--- a/docs/customize/model-roles/embeddings.mdx
+++ b/docs/customize/model-roles/embeddings.mdx
@@ -21,7 +21,7 @@ You can add `embed` to a model's `roles` to specify that it can be used to embed
 
 If you have the ability to use any model, we recommend `voyage-code-3`, which is listed below along with the rest of the options for embeddings models.
 
-If you want to generate embeddings locally, we recommend using `nomic-embed-text` with [Ollama](../model-providers/top-level/ollama.mdx#embeddings-model).
+If you want to generate embeddings locally, we recommend using `nomic-embed-text` with [Ollama](../model-providers/top-level/ollama#embeddings-model).
 
 ### Voyage AI
 
@@ -57,7 +57,7 @@ After obtaining an API key from [here](https://www.voyageai.com/), you can confi
 
 ### Ollama
 
-See [here](../model-providers/top-level/ollama.mdx#embeddings-model) for instructions on how to use Ollama for embeddings.
+See [here](../model-providers/top-level/ollama#embeddings-model) for instructions on how to use Ollama for embeddings.
 
 ### Transformers.js (currently VS Code only)
 
@@ -118,36 +118,36 @@ See [here](../model-providers/top-level/ollama.mdx#embeddings-model) for instruc
 
 ### OpenAI
 
-See [here](../model-providers/top-level/openai.mdx#embeddings-model) for instructions on how to use OpenAI for embeddings.
+See [here](../model-providers/top-level/openai#embeddings-model) for instructions on how to use OpenAI for embeddings.
 
 ### Cohere
 
-See [here](../model-providers/more/cohere.mdx#embeddings-model) for instructions on how to use Cohere for embeddings.
+See [here](../model-providers/more/cohere#embeddings-model) for instructions on how to use Cohere for embeddings.
 
 ### Gemini
 
-See [here](../model-providers/top-level/gemini.mdx#embeddings-model) for instructions on how to use Gemini for embeddings.
+See [here](../model-providers/top-level/gemini#embeddings-model) for instructions on how to use Gemini for embeddings.
 
 ### Vertex
 
-See [here](../model-providers/top-level/vertexai.mdx#embeddings-model) for instructions on how to use Vertex for embeddings.
+See [here](../model-providers/top-level/vertexai#embeddings-model) for instructions on how to use Vertex for embeddings.
 
 ### Mistral
 
-See [here](../model-providers/top-level/mistral.mdx#embeddings-model) for instructions on how to use Mistral for embeddings.
+See [here](../model-providers/top-level/mistral#embeddings-model) for instructions on how to use Mistral for embeddings.
 
 ### NVIDIA
 
-See [here](../model-providers/more/nvidia.mdx#embeddings-model) for instructions on how to use NVIDIA for embeddings.
+See [here](../model-providers/more/nvidia#embeddings-model) for instructions on how to use NVIDIA for embeddings.
 
 ### Bedrock
 
-See [here](../model-providers/top-level/bedrock.mdx#embeddings-model) for instructions on how to use Bedrock for embeddings.
+See [here](../model-providers/top-level/bedrock#embeddings-model) for instructions on how to use Bedrock for embeddings.
 
 ### WatsonX
 
-See [here](../model-providers/more/watsonx.mdx#embeddings-model) for instructions on how to use WatsonX for embeddings.
+See [here](../model-providers/more/watsonx#embeddings-model) for instructions on how to use WatsonX for embeddings.
 
 ### LMStudio
 
-See [here](../model-providers/more/lmstudio.mdx#embeddings-model) for instructions on how to use LMStudio for embeddings.
+See [here](../model-providers/more/lmstudio#embeddings-model) for instructions on how to use LMStudio for embeddings.
