--- a/docs/getting-started/overview.mdx
+++ b/docs/getting-started/overview.mdx
@@ -43,4 +43,14 @@ description: "To quickly understand what you can do with Continue, check out eac
   Learn more about [Agent](/features/agent/quick-start)
 </Info>
 </Tab>
+
+<Tab title="Plan">
+[Plan](/features/agent/plan-mode) provides a safe environment with read-only tools for exploring code and planning changes
+
+![plan](/images/plan-mode.gif)
+
+<Info>
+  Learn more about [Plan](/features/agent/plan-mode)
+</Info>
+</Tab>
 </Tabs>
