--- a/docs/features/agent/how-it-works.mdx
+++ b/docs/features/agent/how-it-works.mdx
@@ -17,22 +17,37 @@ The following handshake describes how Agent uses tools:
 6. The model responds, potentially with another tool call and step 2 begins again
 
 <Info>
-  In [Chat mode](/features/chat/quick-start), tools are **not** included in the
-  request to the model.
+  Tool availability varies by mode:
+  - **Chat mode**: No tools included
+  - **Plan mode**: Only read-only tools included
+  - **Agent mode**: All tools included
 </Info>
 
 ## Built-in tools
 
-Continue includes several built-in tools which provide the model access to IDE functionality:
+Continue includes several built-in tools which provide the model access to IDE functionality.
 
-- **Read file** (`read_file`): read the contents of a file within the project
-- **Read currently open file** (`read_currently_open_file`): read the contents of the currently open file
-- **Create new file** (`create_new_file`): Create a new file within the project, with path and contents specified by the model
-- **Exact search** (`exact_search`): perform a `ripgrep` search within the project
-- **Glob search** (`file_glob_search`): perform a glob search on files in the project. Currently limits to 100 output and warns the Agent if limit reached.
-- **Run terminal command** (`run_terminal_command`): run a terminal command from the workspace root
-- **Search web** (`search_web`): Perform a web search to get top results
-- **View diff** (`view_diff`): View the current working git diff
-- **View repo map** (`view_repo_map`): request a copy of the repository map—same as the [Repo Map Context Provider](/customize/custom-providers#repository-map)
-- **View subdirectory** (`view_subdirectory`): request a copy of a repo map for a specific directory within the project
-- **Create Rule Block** (`create_rule_block`): creates a new rule block in `.continue/rules` based on the contents of the conversation
+### Plan mode tools (read-only)
+
+In Plan mode, only these read-only tools are available:
+- **Read file** (`readFile`)
+- **Read currently open file** (`readCurrentlyOpenFile`)
+- **List directory** (`ls`)
+- **Glob search** (`globSearch`)
+- **Grep search** (`grepSearch`)
+- **Fetch URL content** (`fetchUrlContent`)
+- **Search web** (`searchWeb`)
+- **View diff** (`viewDiff`)
+- **View repo map** (`viewRepoMap`)
+- **View subdirectory** (`viewSubdirectory`)
+- **Codebase tool** (`codebaseTool`)
+
+### Agent mode tools (all tools)
+
+In Agent mode, all tools are available including the read-only tools above plus:
+
+- **Create new file** (`create_new_file`): Create a new file within the project
+- **Edit file** (`editFile`): Make changes to existing files
+- **Run terminal command** (`run_terminal_command`): Run commands from the workspace root
+- **Create Rule Block** (`create_rule_block`): Create a new rule block in `.continue/rules`
+- All other write/execute tools for modifying the codebase
