docs: cmd + i update

--- a/docs/getting-started/overview.mdx
+++ b/docs/getting-started/overview.mdx
@@ -27,7 +27,7 @@ description: "To quickly understand what you can do with Continue, check out eac
 <Tab title="Edit">
 [Edit](/features/edit/quick-start) is a convenient way to modify code without leaving your current file
 
-![edit](/images/edit-d522442f88e715924b4c9f4c83900e3a.gif)
+![edit](/images/edit.gif)
 
 <Info>
   Learn more about [Edit](/features/edit/quick-start)
