--- a/docs/features/edit/context-selection.mdx
+++ b/docs/features/edit/context-selection.mdx
@@ -4,8 +4,4 @@ The input you provide is included in the prompt.
 
 ## Code to Edit
 
-The **entire contents** of each file (the current file for Jetbrains inline Edit, the `Code to Edit` item for VS Code Edit mode) are included in the prompt for context. The model will only attempt to edit the highlighted/specified ranges.
-
-## Context Providers
-
-In VS Code Edit mode, you can use `@` to add context using [Context Providers](/customize/custom-providers), similar to [Chat](/features/chat/context-selection). Some context providers may be disabled in Edit mode.
+The **entire contents** of the current file are included in the prompt for context. The model will only attempt to edit the highlighted/specified ranges.
