--- a/docs/features/edit/how-to-customize.mdx
+++ b/docs/features/edit/how-to-customize.mdx
@@ -6,4 +6,6 @@ You can configure particular models from your Assistant to be used for Edit and 
 2. Click the cube icon to expand the "Models" section
 3. Use the dropdowns to select models for Edit and Apply
 
+![Edit model selection](/images/edit-model.png)
+
 Learn more about the [Edit role](/customize/model-roles/edit) and [Apply role](/customize/model-roles/apply).
