updated model reccs after docs restructure

--- a/docs/features/edit/model-setup.mdx
+++ b/docs/features/edit/model-setup.mdx
@@ -1,6 +1,6 @@
-By default, Edit uses the same model as Chat. We recommend **Claude 3.5 Sonnet** from Anthropic.
+The model you set up for Chat mode will be used for Edit mode by default.
 
-[Explore other Edit models on the Continue Hub →](https://hub.continue.dev)
+The recommended models and how to set them up can be found [here](/features/chat/model-setup).
 
 ## Apply Model
 
@@ -8,7 +8,5 @@ We also recommend setting up an Apply model for the best Edit experience.
 
 **Recommended Apply models:**
 
-- [Morph v0 Fast Apply](https://hub.continue.dev)
-- [Relace Instant Apply](https://hub.continue.dev)
-
-[Explore other Apply models on the Continue Hub →](https://hub.continue.dev)
+- [Morph v3](https://hub.continue.dev/morphllm/morph-v2)
+- [Relace Instant Apply](https://hub.continue.dev/relace/instant-apply)
