--- a/docs/features/agent/model-setup.mdx
+++ b/docs/features/agent/model-setup.mdx
@@ -1,14 +1,3 @@
-We recommend **Claude 3.5 Sonnet** from Anthropic for the best Agent experience.
+The models you set up for Chat mode will be used with Agent mode if the model supports tool calling.
 
-- [Add Claude 3.5 Sonnet to your assistant from the hub](https://hub.continue.dev/anthropic/claude-3-5-sonnet-20241022)
-- Get your API key from the [Anthropic console](https://console.anthropic.com/)
-
-## Other recommended models
-
-- [Claude Sonnet 4 from Anthropic](https://hub.continue.dev/anthropic)
-- [GPT-4o from OpenAI](https://hub.continue.dev/openai/gpt-4o)
-- [Gemini 2.0 Pro from Google](https://hub.continue.dev/google/gemini-2.0-pro)
-
-Agent can be used with models that support tool use through Continue. The best chat models generally support tool use.
-
-For more information on models, check out [our recommended chat models](/features/chat/model-setup).
+The recommended models and how to set them up can be found [here](/features/chat/model-setup).
