--- a/docs/customize/model-providers/top-level/xAI.mdx
+++ b/docs/customize/model-providers/top-level/xAI.mdx
@@ -9,18 +9,18 @@ slug: ../xai
 
 ## Chat model
 
-We recommend configuring **grok-2-latest** as your chat model. For information on other available models, visit [xAI Documentation](https://docs.x.ai/docs/models).
+We recommend configuring **grok-4** as your chat model. For information on other available models, visit [xAI Documentation](https://docs.x.ai/docs/models).
 
 <Tabs>
 	<Tab title="Config">
-  Add the [xAI Grok 2 model block](https://hub.continue.dev/xai/grok-2) on the hub.
+  Add the [xAI Grok 4 model block](https://hub.continue.dev/xai/grok-4) on the hub.
   </Tab>
 	<Tab title="YAML">
   ```yaml title="config.yaml"
   models:
-    - name: Grok 2
+    - name: Grok 4
       provider: xAI
-      model: grok-2-latest
+      model: grok-4
       apiKey: <YOUR_XAI_API_KEY>
   ```
   </Tab>
@@ -29,9 +29,9 @@ We recommend configuring **grok-2-latest** as your chat model. For information o
   {
     "models": [
       {
-        "title": "Grok 2",
+        "title": "Grok 4",
         "provider": "xAI",
-        "model": "grok-2-latest",
+        "model": "grok-4",
         "apiKey": "<YOUR_XAI_API_KEY>"
       }
     ]
