--- a/docs/features/edit/quick-start.mdx
+++ b/docs/features/edit/quick-start.mdx
@@ -14,7 +14,7 @@ Edit is recommended for small, targeted changes, such as
 
 ## Highlight code and activate
 
-Highlight the block of code you would like to modify and press `Cmd+I` (Mac) or `Ctrl+I` (Windows/Linux) to activate Edit mode. You can also press `Cmd/Ctrl+I` with no code highlighted, which will default to editing the current file.
+Highlight the block of code you would like to modify and press `Cmd+I` (Mac) or `Ctrl+I` (Windows/Linux) to activate Edit mode. You can also press `Cmd/Ctrl+I` with no code highlighted, which will default to inserting code at the current cursor location.
 
 ## Describe code changes
 
