--- a/docs/features/agent/how-it-works.mdx
+++ b/docs/features/agent/how-it-works.mdx
@@ -30,24 +30,24 @@ Continue includes several built-in tools which provide the model access to IDE f
 ### Plan mode tools (read-only)
 
 In Plan mode, only these read-only tools are available:
-- **Read file** (`readFile`)
-- **Read currently open file** (`readCurrentlyOpenFile`)
+- **Read file** (`read_file`)
+- **Read currently open file** (`read_currently_open_file`)
 - **List directory** (`ls`)
-- **Glob search** (`globSearch`)
-- **Grep search** (`grepSearch`)
-- **Fetch URL content** (`fetchUrlContent`)
-- **Search web** (`searchWeb`)
-- **View diff** (`viewDiff`)
-- **View repo map** (`viewRepoMap`)
-- **View subdirectory** (`viewSubdirectory`)
-- **Codebase tool** (`codebaseTool`)
+- **Glob search** (`glob_search`)
+- **Grep search** (`grep_search`)
+- **Fetch URL content** (`fetch_url_content`)
+- **Search web** (`search_web`)
+- **View diff** (`view_diff`)
+- **View repo map** (`view_repo_map`)
+- **View subdirectory** (`view_subdirectory`)
+- **Codebase tool** (`codebase_tool`)
 
 ### Agent mode tools (all tools)
 
 In Agent mode, all tools are available including the read-only tools above plus:
 
 - **Create new file** (`create_new_file`): Create a new file within the project
-- **Edit file** (`editFile`): Make changes to existing files
+- **Edit file** (`edit_file`): Make changes to existing files
 - **Run terminal command** (`run_terminal_command`): Run commands from the workspace root
 - **Create Rule Block** (`create_rule_block`): Create a new rule block in `.continue/rules`
 - All other write/execute tools for modifying the codebase
