--- a/docs/features/plan/how-it-works.mdx
+++ b/docs/features/plan/how-it-works.mdx
@@ -29,17 +29,17 @@ When you select Plan mode:
 
 Plan mode includes these read-only built-in tools:
 
-- **Read file** (`readFile`): Read the contents of any file in the project
-- **Read currently open file** (`readCurrentlyOpenFile`): Read the contents of the currently open file
+- **Read file** (`read_file`): Read the contents of any file in the project
+- **Read currently open file** (`read_currently_open_file`): Read the contents of the currently open file
 - **List directory** (`ls`): List files and directories
-- **Glob search** (`globSearch`): Search for files matching a pattern
-- **Grep search** (`grepSearch`): Search file contents using regex patterns
-- **Fetch URL content** (`fetchUrlContent`): Retrieve content from web URLs
-- **Search web** (`searchWeb`): Perform web searches for additional context
-- **View diff** (`viewDiff`): View the current git diff
-- **View repo map** (`viewRepoMap`): Get an overview of the repository structure
-- **View subdirectory** (`viewSubdirectory`): Get a detailed view of a specific directory
-- **Codebase tool** (`codebaseTool`): Advanced codebase analysis capabilities
+- **Glob search** (`glob_search`): Search for files matching a pattern
+- **Grep search** (`grep_search`): Search file contents using regex patterns
+- **Fetch URL content** (`fetch_url_content`): Retrieve content from web URLs
+- **Search web** (`search_web`): Perform web searches for additional context
+- **View diff** (`view_diff`): View the current git diff
+- **View repo map** (`view_repo_map`): Get an overview of the repository structure
+- **View subdirectory** (`view_subdirectory`): Get a detailed view of a specific directory
+- **Codebase tool** (`codebase_tool`): Advanced codebase analysis capabilities
 
 ### MCP tools support
 
