--- a/docs/features/plan/how-it-works.mdx
+++ b/docs/features/plan/how-it-works.mdx
@@ -45,6 +45,10 @@ Plan mode includes these read-only built-in tools:
 
 In addition to built-in read-only tools, Plan mode also supports all MCP (Model Context Protocol) tools. This allows integration with external services that provide additional context or analysis capabilities without modifying your local environment.
 
+<Info>
+  While Plan mode restricts built-in tools to read-only operations, MCP tools are not filtered by Continue. Some MCP tools may have write capabilities that could modify your system or external services. Always verify what actions your MCP tools can perform before using them in Plan mode.
+</Info>
+
 ## The planning workflow
 
 A typical Plan mode workflow follows these steps:
@@ -78,12 +82,16 @@ Plan mode uses a dedicated system message that:
 - Encourages thorough analysis before suggesting changes
 
 <Info>
-  The system message can be customized per model. See [How to Customize](/features/plan/how-to-customize) for details.
+  The system message can be customized per model. See [How to
+  Customize](/features/plan/how-to-customize) for details or see it [directly in
+  the
+  code](https://github.com/continuedev/continue/blob/main/core/llm/defaultSystemMessages.ts).
 </Info>
 
 ## When to use Plan mode vs other modes
 
 ### Use Plan mode when:
+
 - Exploring unfamiliar codebases
 - Planning complex refactors or features
 - Debugging and understanding issues
@@ -91,11 +99,13 @@ Plan mode uses a dedicated system message that:
 - Creating implementation strategies
 
 ### Use Chat mode when:
+
 - Having discussions without needing file access
 - Asking general programming questions
 - Getting explanations without exploring code
 
 ### Use Agent mode when:
+
 - Ready to implement changes
 - Need to create or modify files
 - Want to run commands or tests
