--- a/docs/reference/continue-mcp.mdx
+++ b/docs/reference/continue-mcp.mdx
@@ -6,9 +6,9 @@ keywords: [mcp, documentation, search, mintlify, reference]
 
 The Continue Documentation MCP Server allows you to search and retrieve information from the Continue documentation directly within your agent conversations.
 
-## Installation
+## Set up
 
-### Step 1: Configure Continue
+### Configure Continue
 
 1. Create a folder called `.continue/mcpServers` at the top level of your workspace
 2. Add a file called `continue-docs-mcp.yaml` to this folder
@@ -22,7 +22,7 @@ mcpServers:
   - uses: continuedev/continue-docs-mcp
 ```
 
-### Step 2: Enable Agent Mode
+### Enable Agent Mode
 
 MCP servers only work in agent mode. Make sure to switch to agent mode in Continue before testing.
 
