--- a/docs/features/chat/model-setup.mdx
+++ b/docs/features/chat/model-setup.mdx
@@ -27,7 +27,7 @@ These models have varying tool calling and reasoning capabilities.
 
 [Kimi K2](hub.continue.dev/togetherai/kimi-k2-instruct) from Moonshot AI
 
-1. Get your API key from [TogetherAI](https://api.together.ai)
+1. Get your API key from [Together AI](https://api.together.ai)
 2. Add [Kimi K2](hub.continue.dev/togetherai/kimi-k2-instruct) to your assistant on Continue Hub
 3. Add `TOGETHER_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
 4. Click `Reload config` in the assistant selector in the Continue IDE extension
@@ -51,6 +51,13 @@ These models have varying tool calling and reasoning capabilities.
 1. Get your API key from [Mistral AI](https://console.mistral.ai/)
 2. Add [Devstral Medium](https://hub.continue.dev/mistral/devstral-medium) to your assistant on Continue Hub
 3. Add `MISTRAL_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
+4. Click `Reload config` in the assistant selector in the Continue IDE extension
+
+[DeepSeek-V3](https://hub.continue.dev/togetherai/deepseek-v3) from DeepSeek
+
+1. Get your API key from [Together AI](https://api.together.ai)
+2. Add [DeepSeek-V3](https://hub.continue.dev/togetherai/deepseek-v3) to your assistant on Continue Hub
+3. Add `TOGETHER_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
 4. Click `Reload config` in the assistant selector in the Continue IDE extension
 
 #### Local models
