--- a/docs/customization/rules.mdx
+++ b/docs/customization/rules.mdx
@@ -17,4 +17,4 @@ Your assistant detects rule blocks and applies the specified rules while in [Age
 
 ## Learn More
 
-Learn more in the [rules deep dive](/customization/rules), and view [`rules`](/reference#rules) in the YAML Reference for more details.
+Learn more in the [rules deep dive](/customize/deep-dives/rules), and view [`rules`](/reference#rules) in the YAML Reference for more details.
