--- a/docs/features/agent/how-to-customize.mdx
+++ b/docs/features/agent/how-to-customize.mdx
@@ -2,6 +2,21 @@
 
 Adding Rules can be done in your assistant locally or in the Hub. You can explore Rules on the Continue Hub and refer to the [Rules deep dive](/customize/deep-dives/rules) for more details.
 
+## Customize System Messages
+
+You can customize the system messages for Chat, Agent, and Plan modes using model-level configuration:
+
+```yaml
+models:
+  - name: GPT-4o
+    provider: openai
+    model: gpt-4o
+    chatOptions:
+      baseSystemMessage: "You are a helpful coding assistant."
+      baseAgentSystemMessage: "You are a systematic coding assistant. Break down problems methodically."
+      basePlanSystemMessage: "You are a planning assistant. Create clear, actionable steps."
+```
+
 ## Add MCP Tools
 
 You can add MCP servers to your assistant to give Agent access to more tools. Explore [MCP Servers on the Hub](https://hub.continue.dev) and consult the [MCP guide](/customize/deep-dives/mcp) for more details.
