--- a/docs/features/chat/model-setup.mdx
+++ b/docs/features/chat/model-setup.mdx
@@ -18,18 +18,25 @@ Its strong tool calling and reasoning capabilities make it the best model for Ag
 
 These models have varying tool calling and reasoning capabilities.
 
+[Kimi K2](https://hub.continue.dev/togetherai/kimi-k2-instruct) from Moonshot AI
+
+1. Get your API key from [Together AI](https://api.together.ai)
+2. Add [Kimi K2](https://hub.continue.dev/togetherai/kimi-k2-instruct) to your assistant on Continue Hub
+3. Add `TOGETHER_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
+4. Click `Reload config` in the assistant selector in the Continue IDE extension
+
+[Qwen Coder 3 480B](https://hub.continue.dev/togetherai/qwen3-coder-480b-a35b-instruct-fp8) from Qwen
+
+1. Get your API key from [Together AI](https://api.together.ai)
+2. Add [Qwen Coder 3 480B](https://hub.continue.dev/togetherai/qwen3-coder-480b-a35b-instruct-fp8) to your assistant on Continue Hub
+3. Add `TOGETHER_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
+4. Click `Reload config` in the assistant selector in the Continue IDE extension
+
 [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) from Google
 
 1. Get your API key from [Google AI Studio](https://aistudio.google.com)
 2. Add [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) to your assistant on Continue Hub
 3. Add `GEMINI_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
-4. Click `Reload config` in the assistant selector in the Continue IDE extension
-
-[Kimi K2](hub.continue.dev/togetherai/kimi-k2-instruct) from Moonshot AI
-
-1. Get your API key from [Together AI](https://api.together.ai)
-2. Add [Kimi K2](hub.continue.dev/togetherai/kimi-k2-instruct) to your assistant on Continue Hub
-3. Add `TOGETHER_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
 4. Click `Reload config` in the assistant selector in the Continue IDE extension
 
 [o3](https://hub.continue.dev/openai/o3) from OpenAI
