fix: link to reference

--- a/docs/customization/overview.mdx
+++ b/docs/customization/overview.mdx
@@ -18,4 +18,4 @@ You can easily access your assistant configuration from the Continue Chat sideba
 ![configure an assistant](/images/customization/images/configure-continue-a5c8c79f3304c08353f3fc727aa5da7e.png)
 
 - See [Editing Hub Assistants](/hub/assistants/edit-an-assistant) for more details on managing your hub assistant
-- See the [Config Deep Dive](/reference/json-reference) for more details on configuring local assistants.
+- See the [Config Deep Dive](/reference) for more details on configuring local assistants.
