docs: reorder agent to be first

--- a/docs/features/plan/quick-start.mdx
+++ b/docs/features/plan/quick-start.mdx
@@ -56,5 +56,5 @@ Plan mode will analyze the existing code, understand the current implementation,
 When you're ready to implement your plan, simply switch to Agent mode using the mode selector or keyboard shortcut (`Cmd/Ctrl + .`). The conversation context carries over, so Agent mode can immediately start implementing the plan you developed.
 
 <Tip>
-  Use the keyboard shortcut `Cmd/Ctrl + .` to quickly cycle between Chat, Plan, and Agent modes.
+  Use the keyboard shortcut `Cmd/Ctrl + .` to quickly cycle between Agent, Chat, and Plan modes.
 </Tip>
