--- a/docs/features/chat/model-setup.mdx
+++ b/docs/features/chat/model-setup.mdx
@@ -97,4 +97,8 @@ Their limited tool calling and reasoning capabilities will make it challenging t
 2. Run the model with [Ollama](https://docs.continue.dev/guides/ollama-guide#using-ollama-with-continue-a-developers-guide)
 3. Click `Reload config` in the assistant selector in the Continue IDE extension
 
-For more detailed setup instructions, see [here](/getting-started/install#setup-your-first-model)
+For more detailed setup instructions, see [here](/getting-started/install#setup-your-first-model).
+
+## Model Compatibility
+
+To see which models support specific features like tool use (for Agent mode) and image input, check out our [Model Capabilities guide](/customize/deep-dives/model-capabilities#model-compatibility-matrix).
