--- a/docs/features/agent/model-setup.mdx
+++ b/docs/features/agent/model-setup.mdx
@@ -1,3 +1,7 @@
 The models you set up for Chat mode will be used with Agent mode if the model supports tool calling.
 
 The recommended models and how to set them up can be found [here](/features/chat/model-setup).
+
+## Model Requirements
+
+Agent mode requires models with tool calling capabilities. To see which models support this feature, check the [Model Capabilities guide](/customize/deep-dives/model-capabilities#model-compatibility-matrix).
