--- a/docs/features/edit/model-setup.mdx
+++ b/docs/features/edit/model-setup.mdx
@@ -10,3 +10,7 @@ We also recommend setting up an Apply model for the best Edit experience.
 
 - [Morph v3](https://hub.continue.dev/morphllm/morph-v2)
 - [Relace Instant Apply](https://hub.continue.dev/relace/instant-apply)
+
+## Model Compatibility
+
+For a complete overview of which models support various features, see our [Model Capabilities guide](/customize/deep-dives/model-capabilities#model-compatibility-matrix).
