Change icon for Implementation planning

--- a/docs/guides/plan-mode-guide.mdx
+++ b/docs/guides/plan-mode-guide.mdx
@@ -44,7 +44,7 @@ Plan Mode excels in four key scenarios where understanding before acting prevent
     [See exploration prompts →](#prompt-library)
   </Card>
 
-  <Card title="Implementation Planning" icon="blueprint">
+  <Card title="Implementation Planning" icon="clipboard-list">
     Map dependencies and sequence complex changes before execution. <br />
 
 [See planning prompts →](#prompt-library)
