add alpha warning to cli docs

--- a/docs/guides/cli.mdx
+++ b/docs/guides/cli.mdx
@@ -3,6 +3,8 @@ title: "Continue CLI (cn)"
 icon: book-open
 ---
 
+<Warning>Continue CLI (cn) is currently in Alpha</Warning>
+
 `cn` is an open-source, modular coding agent for the command line.
 
 It provides a battle-tested agent loop so you can simply plug in your model, rules, and tools.
